<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/class_bg"
    tools:context=".attendance.FaceAttendanceActivity">

    <ImageView
        android:id="@+id/logo_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="42dp"
        android:src="@mipmap/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <RelativeLayout
        android:layout_width="330dp"
        android:layout_height="100dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="56dp"
        android:background="@mipmap/weather_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/time"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="08:45"
            android:textColor="@android:color/white"
            android:textSize="32px" />

        <TextView
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_below="@+id/time"
            android:gravity="center_horizontal"
            android:text="星期三 2017-05-17"
            android:textColor="@android:color/white"
            android:textSize="14px" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:src="@mipmap/weather_divider" />

        <TextView
            android:id="@+id/weather_temperature_icon"
            android:layout_width="136dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:drawableLeft="@mipmap/ic_launcher_round"
            android:gravity="center"
            android:text="27C"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/weather_info"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/weather_temperature_icon"
            android:gravity="center_horizontal"
            android:text="小雨        18C - 30C"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/class_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="192dp"
        android:cropToPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/class_info_bg" />

    <TextView
        android:id="@+id/class_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="228dp"
        android:text="语文课"
        android:textColor="@android:color/white"
        android:textSize="40px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/teacher_name_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="@+id/class_info"
        app:layout_constraintTop_toBottomOf="@+id/class_name"
        app:srcCompat="@mipmap/teacher_icon" />

    <TextView
        android:id="@+id/class_teacher_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:text="@string/teacher_tip_str"
        android:textColor="@android:color/white"
        android:textSize="28px"
        app:layout_constraintBottom_toBottomOf="@+id/teacher_name_iv"
        app:layout_constraintStart_toEndOf="@+id/teacher_name_iv"
        app:layout_constraintTop_toTopOf="@+id/teacher_name_iv" />

    <TextView
        android:id="@+id/teacher_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:text=" 李红"
        android:textColor="@android:color/white"
        android:textSize="40px"
        app:layout_constraintBottom_toBottomOf="@+id/teacher_name_iv"
        app:layout_constraintStart_toEndOf="@+id/class_teacher_tip"
        app:layout_constraintTop_toTopOf="@+id/teacher_name_iv" />

    <ImageView
        android:id="@+id/real_icon"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="@+id/teacher_name_iv"
        app:layout_constraintTop_toBottomOf="@+id/teacher_name_iv"
        app:srcCompat="@mipmap/real_icon" />

    <TextView
        android:id="@+id/real_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/should_str"
        android:textColor="@android:color/white"
        android:textSize="28px"
        app:layout_constraintBottom_toBottomOf="@+id/real_icon"
        app:layout_constraintEnd_toEndOf="@+id/class_teacher_tip"
        app:layout_constraintStart_toStartOf="@+id/class_teacher_tip"
        app:layout_constraintTop_toTopOf="@+id/real_icon" />

    <TextView
        android:id="@+id/student_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:text="40"
        android:textColor="@android:color/white"
        android:textSize="40px"
        app:layout_constraintBottom_toBottomOf="@+id/real_icon"
        app:layout_constraintStart_toEndOf="@+id/real_tv"
        app:layout_constraintTop_toTopOf="@+id/real_icon" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="@+id/real_icon"
        app:layout_constraintTop_toBottomOf="@+id/real_icon"
        app:srcCompat="@mipmap/ontime_icon" />

    <TextView
        android:id="@+id/should_attendance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/real_str"
        android:textColor="@android:color/white"
        android:textSize="28px"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/class_teacher_tip"
        app:layout_constraintStart_toStartOf="@+id/class_teacher_tip"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:id="@+id/student_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:text="38"
        android:textColor="@android:color/white"
        android:textSize="40px"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/should_attendance"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@mipmap/later_icon" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/later_str"
        android:textSize="28px"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/class_teacher_tip"
        app:layout_constraintStart_toStartOf="@+id/class_teacher_tip"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/student_later"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:text="1"
        android:textColor="@color/later_color"
        android:textSize="40px"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@mipmap/absence_icon" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/absent_str"
        android:textColor="@android:color/white"
        android:textSize="28px"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/class_teacher_tip"
        app:layout_constraintStart_toStartOf="@+id/class_teacher_tip"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/student_absent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:text="1"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="40px"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/student_list"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="90dp"
        android:layout_marginEnd="202dp"
        android:layout_marginLeft="164dp"
        android:layout_marginRight="202dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="192dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/class_info"
        app:layout_constraintTop_toTopOf="parent" >

    </android.support.v7.widget.RecyclerView>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="@+id/class_info"
        app:layout_constraintBottom_toBottomOf="@+id/class_info"
        app:layout_constraintLeft_toRightOf="@+id/class_info"
        android:layout_marginLeft="35dp"
        app:srcCompat="@mipmap/arrow_left" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="58dp"
        app:layout_constraintBottom_toBottomOf="@+id/class_info"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/class_info"
        app:srcCompat="@mipmap/arrow_right" />

</android.support.constraint.ConstraintLayout>